src/test/success/else-if.egern
func test(a: int): int {
    if (a > 5) {
        return 1
    } else if (a < 2) {
        return 2
    } else {
        return 3
    }
    return -1
}

print(test(6))
print(test(1))
print(test(2))
